[package]
name = "gsync"
version = "1.3.1"
edition = "2021"
authors = ["Xavier2p <https://github.com/Xavier2p>"]
description = "A simple tool to use `git` with ease.\nWritten in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
