[package]
name = "gsync"
version = "1.4.0"
edition = "2021"
authors = ["Xavier2p <https://github.com/Xavier2p>"]
description = "A simple tool to use `git` with ease.\nWritten in Rust."
repository = "https://github.com/xavier2p/gitsync"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
