[package]
name = "gsync"
version = "2.0.0"
edition = "2021"
authors = ["Xavier2p <https://github.com/Xavier2p>"]
description = "A simple tool to use `git` with ease.\nWritten in Rust."
repository = "https://github.com/xavier2p/gitsync"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
